--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "json-server": "^0.17.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -16,6 +17,7 @@
     "recharts": "^2.1.8",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2",
+    "webpack": "^5.69.1",
     "zustand": "^3.7.0"
   },
   "scripts": {
