--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "zustand": "^3.7.0"
   },
   "scripts": {
-    "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
+    "start": "node --optimize_for_size --max_old_space_size=460 dist/main.js",
     "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
