--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
+    "netlify-cli": "^9.13.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "recharts": "^2.1.8",
+    "serve": "^13.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2",
     "webpack": "^5.69.1",
